cabal-version:       2.4
name:                advent2019
version:             1.0.0.0
synopsis:            Advent of Code 2019 Solutions
description:         These are my cleaned-up solutions to the Advent of Code
                     programming game. <https://adventofcode.com>
license:             BSD3
license-file:        LICENSE
author:              Emil Gedda
maintainer:          emil.gedda@emilgedda.se
copyright:           2019 Emil Gedda
build-type:          Simple

library
  hs-source-dirs:      lib
  default-language:    Haskell2010

  exposed-modules:
    Data.Intcode

  build-depends:
    base,
    containers,
    split,
    parallel


executable 15
  main-is:             main.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      src/15
  default-language:    Haskell2010
