cabal-version:       2.4
name:                advent2019
version:             1.0.0.0
synopsis:            Advent of Code 2019 Solutions
description:         These are my cleaned-up solutions to the Advent of Code
                     programming game. <https://adventofcode.com>
license:             BSD-3-Clause
license-file:        LICENSE
author:              Emil Gedda
maintainer:          emil.gedda@emilgedda.se
copyright:           2019 Emil Gedda
build-type:          Simple

library
  hs-source-dirs:      lib
  default-language:    Haskell2010

  exposed-modules:
    Data.Intcode

  build-depends:
    base,
    containers,
    split,
    parallel

executable 9_1
  main-is:             1.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      src/09
  default-language:    Haskell2010

executable 9_2
  main-is:             2.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      src/09
  default-language:    Haskell2010

executable 11_1
  main-is:             1.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      src/11
  default-language:    Haskell2010

executable 11_2
  main-is:             2.hs
  build-depends:       advent2019, base, containers, split
  hs-source-dirs:      src/11
  default-language:    Haskell2010

executable 13_1
  main-is:             1.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      src/13
  default-language:    Haskell2010

executable 13_2
  main-is:             2.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      src/13
  default-language:    Haskell2010

executable 15
  main-is:             main.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      src/15
  default-language:    Haskell2010

executable 17_1
  main-is:             1.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      src/17
  default-language:    Haskell2010
