cabal-version:       2.4
name:                advent2019
version:             1.0.0.0
synopsis:            Advent of Code 2019 Solutions
description:         These are my cleaned-up solutions to the Advent of Code
                     programming game. <https://adventofcode.com>
license:             BSD-3-Clause
license-file:        LICENSE
author:              Emil Gedda
maintainer:          emil.gedda@emilgedda.se
copyright:           2019 Emil Gedda
build-type:          Simple

library
  hs-source-dirs:      lib
  default-language:    Haskell2010

  exposed-modules:
    Data.Intcode

  build-depends:
    base,
    containers,
    split,
    parallel

executable 1_1
  main-is:             1.hs
  build-depends:       base
  hs-source-dirs:      src/01
  default-language:    Haskell2010

executable 1_2
  main-is:             2.hs
  build-depends:       base
  hs-source-dirs:      src/01
  default-language:    Haskell2010

executable 2_1
  main-is:             1.hs
  build-depends:       base, advent2019
  hs-source-dirs:      src/02
  default-language:    Haskell2010

executable 2_2
  main-is:             2.hs
  build-depends:       base, advent2019
  hs-source-dirs:      src/02
  default-language:    Haskell2010

executable 3_1
  main-is:             1.hs
  build-depends:       base, containers, split
  hs-source-dirs:      src/03
  default-language:    Haskell2010

executable 3_2
  main-is:             2.hs
  build-depends:       base, containers, split
  hs-source-dirs:      src/03
  default-language:    Haskell2010

executable 4_1
  main-is:             1.hs
  build-depends:       base
  hs-source-dirs:      src/04
  default-language:    Haskell2010

executable 4_2
  main-is:             2.hs
  build-depends:       base
  hs-source-dirs:      src/04
  default-language:    Haskell2010

executable 5_1
  main-is:             1.hs
  build-depends:       base, advent2019
  hs-source-dirs:      src/05
  default-language:    Haskell2010

executable 5_2
  main-is:             2.hs
  build-depends:       base, advent2019
  hs-source-dirs:      src/05
  default-language:    Haskell2010

executable 6_1
  main-is:             1.hs
  build-depends:       base, containers
  hs-source-dirs:      src/06
  default-language:    Haskell2010

executable 6_2
  main-is:             2.hs
  build-depends:       base, containers
  hs-source-dirs:      src/06
  default-language:    Haskell2010

executable 7_1
  main-is:             1.hs
  build-depends:       base, advent2019
  hs-source-dirs:      src/07
  default-language:    Haskell2010

executable 7_2
  main-is:             2.hs
  build-depends:       base, advent2019
  hs-source-dirs:      src/07
  default-language:    Haskell2010

executable 9_1
  main-is:             1.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      src/09
  default-language:    Haskell2010

executable 9_2
  main-is:             2.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      src/09
  default-language:    Haskell2010

executable 10_1
  main-is:             1.hs
  build-depends:       base, containers
  hs-source-dirs:      src/10
  default-language:    Haskell2010

executable 10_2
  main-is:             2.hs
  build-depends:       base, containers
  hs-source-dirs:      src/10
  default-language:    Haskell2010

executable 11_1
  main-is:             1.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      src/11
  default-language:    Haskell2010

executable 11_2
  main-is:             2.hs
  build-depends:       advent2019, base, containers, split
  hs-source-dirs:      src/11
  default-language:    Haskell2010

executable 13_1
  main-is:             1.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      src/13
  default-language:    Haskell2010

executable 13_2
  main-is:             2.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      src/13
  default-language:    Haskell2010

executable 14_1
  main-is:             1.hs
  build-depends:       advent2019, base, containers, parsec
  hs-source-dirs:      src/14
  default-language:    Haskell2010

executable 14_2
  main-is:             2.hs
  build-depends:       advent2019, base, containers, parsec
  hs-source-dirs:      src/14
  default-language:    Haskell2010

executable 15_1
  main-is:             1.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      src/15
  default-language:    Haskell2010

executable 15_2
  main-is:             2.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      src/15
  default-language:    Haskell2010

executable 16_1
  main-is:             1.hs
  build-depends:       advent2019, base
  hs-source-dirs:      src/16
  default-language:    Haskell2010

executable 16_2
  main-is:             2.hs
  build-depends:       advent2019, base, vector
  hs-source-dirs:      src/16
  default-language:    Haskell2010

executable 17_1
  main-is:             1.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      src/17
  default-language:    Haskell2010

executable 17_2
  main-is:             2.hs
  build-depends:       advent2019, base, containers, split, lens
  hs-source-dirs:      src/17
  default-language:    Haskell2010

executable 18_1
  main-is:             1.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      src/18
  default-language:    Haskell2010

executable 19_1
  main-is:             1.hs
  build-depends:       advent2019, base, containers
  hs-source-dirs:      src/19
  default-language:    Haskell2010

executable 19_2
  main-is:             2.hs
  build-depends:       advent2019, base, containers, split
  hs-source-dirs:      src/19
  default-language:    Haskell2010
